# dart-bindgen

./: Cargo.toml  README.md
.github/workflows/: audit.yml  build-cli.yml  create_new_tag.yml  lints.yml  release.yml  tests.yml
src/: config.rs  dart_source_writer.rs  enumeration.rs  errors.rs  func.rs  lib.rs  structure.rs
tests/: allo_isolate.rs  enum.rs  keystore.rs  struct.rs  tests.rs
tests/headers/: enum.h  keystore.h  simple.h  simple_fn.h  sqlite3.h  struct.h
tests/snapshots/: allo_isolate__allo_isolate.snap  keystore__keystore.snap  r#enum__enum.snap  r#struct__enum.snap
