[package]
name = "dart-bindgen"
version = "0.1.0"
authors = ["Sunshine Foundation Developers", "Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
description = "A tool for generating Dart FFI bindings to C Header file."
repository = "https://github.com/sunshine-protocol/dart-bindgen"
keywords = ["bindings", "ffi", "code-generation", "dart"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
readme = "README.md"
homepage = "https://github.com/sunshine-protocol/dart-bindgen"
license = "Apache-2.0"
license-file = "LICENSE"

[dependencies]
clang = "0.23"
thiserror = "1.0"
log = "0.4"

[dev-dependencies]
simplelog = "0.8"

[[bin]]
name = "dart-bindgen"
path = "bin/cli.rs"
doc = false
required-features = ["cli"]

[features]
deafult = []
cli = []

[badges]
maintenance = { status = "actively-developed" }
