[package]
name = "dart-bindgen"
version = "0.1.3"
authors = ["Sunshine Foundation Developers", "Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
description = "A tool for generating Dart FFI bindings to C Header file."
repository = "https://github.com/sunshine-protocol/dart-bindgen"
keywords = ["bindings", "ffi", "code-generation", "dart"]
categories = ["external-ffi-bindings", "development-tools::ffi"]
readme = "README.md"
homepage = "https://github.com/sunshine-protocol/dart-bindgen"
license-file = "LICENSE"

[dependencies]
clang = "0.24.0"
thiserror = "^1.0"
log = "^0.4"
# CLI Deps
argh = { version = "^0.1", optional = true }
pretty_env_logger = { version = "^0.4", optional = true }
anyhow = { version = "^1.0", optional = true }

[dev-dependencies]
simplelog = "0.8"
insta = "0.16.1"

[[bin]]
name = "dart-bindgen"
path = "bin/cli.rs"
doc = false
required-features = ["cli"]

[features]
deafult = []
cli = ["argh", "pretty_env_logger", "anyhow"]

[badges]
maintenance = { status = "actively-developed" }
